# forge-lang

./: .gitignore  CLAUDE.md  IDEAS.md  spec_v0.0.2.md
forge/: .gitignore  COMPILER_GUIDELINES.md  Cargo.toml  FEATURE_GUIDELINES.md  PRINCIPLES.md  basic_server  demo.fg  drop.fg  forge.toml  full_stack  hello.fg  undefined_var
forge/.beads/: metadata.json
forge/.cargo/: config.toml
forge/compiler/: lib.rs  main.rs
forge/compiler/core/: docs.rs  feature.rs  lang.rs  mod.rs  registry.rs  site.rs  test_runner.rs
forge/compiler/features/: mod.rs
forge/data/: app.db-shm  app.db-wal
forge/docs/lang-site/: cheatsheet.html  index.html  search-index.json  spec.html  style.css
forge/errors/: registry.toml
forge/providers/std-ai/: Cargo.toml  provider.toml
forge/providers/std-auth/: Cargo.toml  provider.toml
forge/providers/std-channel/: Cargo.toml  provider.toml
forge/providers/std-cli/: Cargo.toml  provider.toml
forge/providers/std-cron/: Cargo.toml  provider.toml
forge/providers/std-fs/: Cargo.toml  provider.toml
forge/providers/std-http/: Cargo.toml  provider.toml
forge/providers/std-model/: Cargo.toml  provider.toml
forge/providers/std-process/: Cargo.toml  provider.toml
forge/providers/std-queue/: Cargo.toml  provider.toml
forge/providers/std-term/: Cargo.toml  provider.toml
forge/providers/std-test/: Cargo.toml  provider.toml
forge/registry/: forge.toml  main.fg
forge/registry/lib/: hash.fg  storage.fg  validation.fg
forge/registry/routes/: auth.fg  context.fg  packages.fg  publish.fg  versions.fg
forge/scripts/: lint-errors.sh  update-feature-status.fg
forge/src/: lib.rs  main.rs
forge/stdlib/: runtime.c
forge/tests/: error_tests.rs
(+935 files in other folders)
