[package]
name = "forge"
version = "0.1.0"
edition = "2021"
description = "The Forge programming language compiler"

[dependencies]
inkwell = { version = "0.5", features = ["llvm18-0"] }
clap = { version = "4", features = ["derive"] }
ariadne = "0.4"
colored = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
