[package]
name = "forge"
version = "0.1.0"
edition = "2021"
description = "The Forge programming language compiler"

[lib]
path = "packages/forgec/lib.rs"

[[bin]]
name = "forgec"
path = "packages/forgec/main.rs"

[dependencies]
inkwell = { version = "0.5", features = ["llvm18-0"] }
clap = { version = "4", features = ["derive"] }
ariadne = "0.4"
colored = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
inventory = "0.3"
libloading = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
regex-lite = "0.1"
serde_json = "1"
